# fsplitter

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bors.toml
.github/workflows/: check.yml  safety.yml  scheduled.yml  test.yml
src/: lib.rs  main.rs
